{{$NEXT}}

1.302014_002 2016-04-22 14:54:51-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC2
    - Restore X-Breaks meta info
    - Keep dist.ini in the tarball

1.302014_001 2016-04-22 04:01:50-07:00 America/Los_Angeles (TRIAL RELEASE)

    - RC1
    - Merge Test2 into the Test-Simple dist
    - Remove experimental status
    - Update copyright dates
    - Better error messages when using Carp in Hashbase init()
    - Document 2 methods on Events
    - Fix Test2 #17 (typo fix in docs)
    - Report version mismatches between Test::Builder and Test2
    - Update transition docs
    - Breakage library and warnings

*****************************************************************************
*                                                                           *
* BELOW THIS POINT ARE THE SEPERATE CHANGELOGS FOR Test-Simple, Test2, AND  *
* Test-Stream.                                                              *
*                                                                           *
*****************************************************************************

Test-Simple 1.302013_019 2016-04-13 20:23:18-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Expand no_numbers support to custom formatters

Test-Simple 1.302013_018 2016-04-07 21:23:03-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support Test2 using an alternative formatter

Test-Simple 1.302013_017 2016-04-05 11:13:50-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support subtest identification for events
    - Bump minimum Test2 version

Test-Simple 1.302013_016 2016-04-04 21:33:20-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Support some newer event features from Test2
    - Bump minimum Test2 version

Test-Simple 1.302013_015 2016-03-29 09:24:10-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Bump minimum Test2 version to protect from segv

Test-Simple 1.302013_014 2016-03-08 10:00:50-08:00 America/Los_Angeles (TRIAL RELEASE)
